# Project-Emet

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CLAUDE_CODE_UPGRADE_NOTES.md  DEPLOYMENT_GUIDE.md  Dockerfile  FABLE_UPGRADE.md  LICENSE  NOTICE  README.md  SHIPPABILITY_PLAN.md  VALUES.json  demo_occrp.sh  docker-compose.enterprise.yml  docker-compose.field.yml  docker-compose.occrp.yml  docker-compose.server.yml  docker-compose.yml  mcp-config.example.json  pyproject.toml
_future/: README.md
_future/adapters/discord/: __init__.py  bot.py
_future/adapters/email/: __init__.py  adapter.py
_future/multitenancy/: isolation.py
_future/plugins/: registry.py  sandbox.py  sdk.py
_future/skills/: base.py
_future/skills/investigation/: document_analysis.py  entity_search.py
_future/skills/monitoring/: monitoring.py
_future/skills/resources/: resources.py
_future/skills/specialized/: corporate_research.py  financial_investigation.py
_future/tests/: test_adapter_investigation.py  test_adapters_discord.py  test_adapters_email.py  test_bdi_coherence.py  test_integration.py  test_integration_pipeline.py  test_integrations_spans.py  test_llm_integration.py  test_multitenancy.py  test_plugins.py  test_spiderfoot.py  test_tuning.py
docs/: COMPETITIVE_ROADMAP.md  COMPETITIVE_ROADMAP_v3.md  PILOT_PLAN.md  TESTING_PLAN.md  USER_GUIDE.md
emet/: __init__.py  cli.py  db.py
emet/adapters/: __init__.py  investigation_bridge.py
emet/adapters/slack/: __init__.py  handlers.py  installation_store.py
emet/adapters/webchat/: __init__.py  handler.py  routes.py  widget.py
emet/agent/: __init__.py  audit.py  bdi_layer.py  efe_advisor.py  health.py  loop.py  persistence.py  safety_harness.py  session.py  watchlist.py
emet/api/: app.py  middleware.py  websocket.py
emet/api/routes/: agent.py  config.py  funding.py  health.py  investigation.py  memory.py  ws_investigation.py
emet/cognition/: __init__.py  efe.py  fast_classifier.py  llm_anthropic.py  llm_base.py  llm_client.py  llm_factory.py  llm_ollama.py  llm_stub.py  model_router.py  orchestrator.py
emet/config/: settings.py
emet/data/: demo_entities.py
emet/export/: __init__.py  evidence.py  ftm_bundle.py  markdown.py  pdf.py  timeline.py
emet/ftm/: aleph_client.py  data_spine.py
emet/governance/: __init__.py  otel.py
emet/graph/: __init__.py  algorithms.py  engine.py  exporters.py  ftm_loader.py  visualizer.py
emet/kintsugi_engine/: __init__.py  promoter.py
emet/mcp/: __init__.py  resources.py  server.py  tools.py
emet/memory/: __init__.py  cma_stage1.py  cma_stage3.py  cold_archive.py  significance.py  spaced.py  temporal.py
emet/models/: __init__.py  base.py  tenant.py
emet/monitoring/: __init__.py
emet/multitenancy/: __init__.py  context.py  isolation.py  quotas.py  tenant.py
emet/plugins/: __init__.py  loader.py
emet/security/: __init__.py  invariants.py  pii.py  sandbox.py  target_policy.py
emet/skills/: __init__.py  llm_integration.py
emet/skills/investigation/: __init__.py  cross_reference.py  data_quality.py  network_analysis.py  nlp_extraction.py  osint_recon.py
emet/skills/publication/: __init__.py  story_development.py  verification.py
emet/skills/specialized/: __init__.py  environmental_investigation.py  government_accountability.py  labor_investigation.py
emet/tuning/: __init__.py
emet/workflows/: __init__.py  engine.py  registry.py  schema.py
ftm_harness/: __init__.py  db.py
ftm_harness/adapters/: __init__.py
ftm_harness/api/: middleware.py
ftm_harness/api/routes/: agent.py  config.py  health.py  memory.py
ftm_harness/cognition/: efe.py  llm_client.py  model_router.py  orchestrator.py
ftm_harness/governance/: __init__.py
ftm_harness/kintsugi_engine/: __init__.py  promoter.py
ftm_harness/memory/: __init__.py  cma_stage1.py  cma_stage3.py  cold_archive.py  significance.py  spaced.py  temporal.py
ftm_harness/models/: __init__.py  base.py  tenant.py
ftm_harness/multitenancy/: __init__.py  context.py  isolation.py  quotas.py  tenant.py
ftm_harness/plugins/: __init__.py  loader.py  registry.py  sandbox.py  sdk.py
ftm_harness/security/: __init__.py  invariants.py  pii.py
ftm_harness/skills/: __init__.py  base.py
ftm_harness/skills/investigation/: __init__.py  cross_reference.py  data_quality.py  document_analysis.py  entity_search.py  network_analysis.py  nlp_extraction.py
ftm_harness/skills/monitoring/: __init__.py  monitoring.py
ftm_harness/skills/publication/: story_development.py  verification.py
ftm_harness/skills/resources/: __init__.py  resources.py
ftm_harness/skills/specialized/: corporate_research.py  environmental_investigation.py  financial_investigation.py  labor_investigation.py  (+1 more)
ftm_harness/tuning/: __init__.py
migrations/: env.py
skills/blockchain-forensics/: SKILL.md
skills/document-ocr-text-extraction/: SKILL.md
skills/emet-investigation-methodology/: SKILL.md
skills/financial-pattern-recognition/: SKILL.md
skills/government-portal-navigation/: SKILL.md
skills/network-analysis-graph-theory/: SKILL.md
tests/: mock_aleph.py  test_active_inference.py  test_adapters_shared.py  test_adapters_slack.py  test_adapters_webchat.py  test_agent.py  test_agent_llm_wiring.py  test_api_extensions.py  test_audit.py  test_augmentation.py  test_bdi_package.py  test_beneficial_ownership.py  test_blockchain.py  test_bloom_adapter.py  test_calibration.py  test_companies_house.py  test_config_settings.py  test_config_values_loader.py  test_config_values_schema.py  test_congress.py  test_courtlistener.py  test_crypto_intel.py  test_document_sources.py  test_drift_detector.py  test_e2e.py  test_e2e_pipeline.py  test_edgar.py  test_entity_resolution.py  test_evolution.py  test_export.py  test_fast_classifier.py  test_fec.py  test_federation.py  test_ftm_roundtrip.py  test_funding_endpoint.py  test_gdelt.py  test_governance_consensus.py  test_governance_otel.py  test_graph.py  test_http_api.py  (+36 more)
tests/fixtures/: sample_entities.json
tests/live/: conftest.py  test_live_aleph.py  test_live_federation.py  test_live_pipeline.py
(+23 files in other folders)
