[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emet"
version = "0.1.0"
description = "Emet — Investigative journalism agentic framework built on FollowTheMoney"
readme = "README.md"
license = {text = "Emet Source-Available License v1.0"}
requires-python = ">=3.11"
authors = [
    {name = "Liberation Labs / TH Coalition"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.0",
    "httpx>=0.25.0",
    "redis>=5.0.0",
    "celery>=5.3.0",

    # FollowTheMoney ecosystem
    "followthemoney>=4.4.0",
    "rigour>=0.6.0",
    "nomenklatura>=3.7.0",
    "alephclient>=2.4.0",

    # LLM / AI
    "langchain>=0.1.0",
    "langgraph>=0.0.20",
    "anthropic>=0.18.0",
    "openai>=1.10.0",

    # NLP
    "spacy>=3.7.0",

    # Observability
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]
nlp = [
    "en-core-web-trf @ https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.7.3/en_core_web_trf-3.7.3-py3-none-any.whl",
    "transformers>=4.36.0",
    "torch>=2.1.0",
]
graph = [
    "networkx>=3.2.0",
    "python-louvain>=0.16",
    "igraph>=0.11.0",
]
osint = [
    "spiderfoot-client>=0.1.0",
]
mcp = [
    "uvicorn>=0.24.0",
]

[project.urls]
Repository = "https://github.com/Liberation-Labs-THCoalition/Project-Emet"

[project.scripts]
emet = "emet.cli:main"
emet-mcp = "emet.mcp.server:cli_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["emet*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
