[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emet"
version = "0.1.0"
description = "Emet — Investigative journalism agentic framework built on FollowTheMoney"
readme = "README.md"
license = {text = "Emet Source-Available License v1.0"}
requires-python = ">=3.11"
authors = [
    {name = "Liberation Labs / TH Coalition"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core — the investigation pipeline
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "networkx>=3.2.0",
    "numpy>=1.26.0",

    # LLM (anthropic is lazy-imported, only needed for non-stub mode)
    "anthropic>=0.18.0",

    # PDF reports
    "reportlab>=4.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]
# FollowTheMoney ecosystem (for native FtM entity handling)
ftm = [
    "followthemoney>=4.4.0",
    "rigour>=0.6.0",
    "nomenklatura>=3.7.0",
    "alephclient>=2.4.0",
]
# Production infrastructure (database, observability, task queue)
production = [
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.19.0",
    "pydantic-settings>=2.1.0",
]
# NLP (spaCy + transformers for entity extraction)
nlp = [
    "spacy>=3.7.0",
    "en-core-web-trf @ https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.7.3/en_core_web_trf-3.7.3-py3-none-any.whl",
    "transformers>=4.36.0",
    "torch>=2.1.0",
]
# Advanced graph algorithms
graph = [
    "python-louvain>=0.16",
    "igraph>=0.11.0",
]
# OSINT reconnaissance
osint = [
    "spiderfoot-client>=0.1.0",
]
# Everything
all = [
    "emet[ftm,production,graph,osint]",
]

[project.urls]
Repository = "https://github.com/Liberation-Labs-THCoalition/Project-Emet"

[project.scripts]
emet = "emet.cli:main"
emet-mcp = "emet.mcp.server:cli_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["emet*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# ---------------------------------------------------------------------------
# Coverage configuration
# ---------------------------------------------------------------------------
# Exclude modules that are either deprecated (skills/), not yet wired
# (workflows/), deferred to future sprints, or not MVP (email/discord
# adapters).  This focuses coverage metrics on the active codebase.

[tool.coverage.run]
source = ["emet"]
omit = [
    "emet/skills/*",
    "emet/workflows/*",
    "emet/adapters/email/*",
    "emet/adapters/discord/*",
    "emet/ftm/external/augmentation.py",
    "emet/ftm/external/document_sources.py",
    "emet/ftm/external/entity_resolution.py",
    "emet/ftm/external/semantic_search.py",
    "emet/ftm/external/spiderfoot.py",
    "emet/ftm/external/transcription.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
]
show_missing = true
